# fastapi-telegram-bot-template

./: .gitignore  README.md  base.config.yml  main.py  migrate.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml
alembic/: env.py
app/: __init__.py
app/api/: dependencies.py  telegram_router.py
app/bot/: __init__.py  bot_manager.py  keyboards.py  middlewares.py
app/bot/handlers/: __init__.py  common.py
app/core/: __init__.py  config.py  database.py  logger.py  redis.py
app/models/: __init__.py  base.py
app/scheduler/: __init__.py  manager.py
app/scheduler/jobs/: __init__.py
app/utils/: security.py  snowflake.py
deploy/: self-project.service
docs/: TECH_SPEC.md
